--- a/Next form.html
+++ b/Next form.html
@@ -68,7 +68,7 @@
         </span>
         </fieldset>
         <div class="footer-buttons">
-            <button class="secondary-button"> Previous</button>
+            <a href="./index.html"> <button class="secondary-button"> Previous</button></a>
             <button class="primary-button"> Next</button>
         </div>
     </div>
